--- a/serializeCompare/pom.xml
+++ b/serializeCompare/pom.xml
@@ -45,6 +45,18 @@
       <version>1.11</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.protostuff</groupId>
+      <artifactId>protostuff-core</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.protostuff</groupId>
+      <artifactId>protostuff-runtime</artifactId>
+      <version>1.6.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
