--- a/SGCCPlatform-business-serializeUtil/pom.xml
+++ b/SGCCPlatform-business-serializeUtil/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.sgcc</groupId>
   <artifactId>SGCCPlatform-business-serializeUtil</artifactId>
-  <version>1.1</version>
+  <version>2.0</version>
 
   <name>SGCCPlatform-business-serializeUtil</name>
   <!-- FIXME change it to the project's website -->
@@ -58,28 +58,12 @@
       <version>3.0.1</version>
       <scope>compile</scope>
     </dependency>
-
-    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.8.1</version>
-      <scope>compile</scope>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>2.2.0</version>
     </dependency>
-
-    <dependency>
-      <groupId>com.nimbusds</groupId>
-      <artifactId>nimbus-jose-jwt</artifactId>
-      <version>4.23</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>net.minidev</groupId>
-      <artifactId>json-smart</artifactId>
-      <version>2.3</version>
-      <scope>compile</scope>
-    </dependency>
-
   </dependencies>
 
   <build>
